Remove miami header text improve mobile viewing Add real text Fix logo cut off fix spacing

--- a/src/assets/stylesheets/conference-content.scss
+++ b/src/assets/stylesheets/conference-content.scss
@@ -111,12 +111,10 @@ hr {
   list-style: none;
   padding: 0;
   width: 100%;
-  //max-width: 480px;
 
   margin-block-start: 0;
   margin-block-end: 0;
   li {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -131,6 +129,10 @@ hr {
 
     @media (max-width: 1024px) {
       font-size: 12px;
+    }
+
+    @media (max-width: 400px) {
+      padding: 16px 10px;
     }
 
     b {
@@ -209,10 +211,19 @@ hr {
 
   :local(.steps) {
     margin: 80px 100px;
+
+
+    p {
+      margin-top: 0;
+    }
+
     dt {
       color: $steps-circle-heading-background;
       text-transform: uppercase;
       font-family: 'GothamBold', Serif;
+      display: flex;
+      align-items: center;
+      margin-bottom: 5px;
     }
 
     :local(.step-heading) {
@@ -225,6 +236,11 @@ hr {
       margin: 0 0 60px 65px;
       font-size: 18px;
       line-height: 1.5;
+
+      ul {
+        padding-left: 20px;
+        margin-bottom: 18px;
+      }
 
       @media (max-width: 720px) {
         margin: 0 0 30px 0;
@@ -243,6 +259,7 @@ hr {
       margin-right: 15px;
       color: $steps-circle-text-color;
       background: $steps-circle-background;
+      min-width: 50px;
 
       @media (max-width: 720px) {
         display: none;
@@ -252,6 +269,10 @@ hr {
     @media (max-width: 720px) {
       margin: 30px;
     }
+
+    @media (max-width: 390px) {
+      margin: 15px;
+    }
   }
 }
 
@@ -260,6 +281,7 @@ hr {
   color: var(--text-field-text-color, black);
   display: flex;
   margin-bottom: 20px;
+  justify-content: space-between;
 
   p {
     line-height: 1.3;
@@ -340,9 +362,12 @@ hr {
 
   :local(.logo) {
     max-width: 220px;
-    margin-top: 20px;
-    margin-left: -16px;
+    margin: 20px 0 20px -16px;
     align-content: flex-start;
+
+    @media (max-width: 390px) {
+      margin: 0;
+    }
   }
 
   :local(.browse-button-wrap) {
@@ -410,26 +435,27 @@ hr {
 }
 
 :local(.description-Container-Header) {
-  min-height: 710px;
   width: 100%;
   background-color: $banner-background-color;
   background-image: url('../images/audience.png');
   background-position-x: right;
   background-repeat: repeat-y;
+  padding-bottom: 80px;
 
   @media (max-width: 720px) {
-    min-height: 600px;
+    padding-bottom: 20px;
+    background-size: 220px auto;
+  }
+  @media (max-width: 450px) {
+    background-image: none;
   }
 }
 
 :local(.banner) {
-  min-height: 320px;
   border: 1px solid #707070;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
   margin-right: 140px;
   margin-left: 140px;
   background-color: $text-field-background-color;
@@ -439,6 +465,12 @@ hr {
   text-transform: uppercase;
 
 
+  @media only screen and (max-width: 900px) {
+    margin-right: 60px;
+    margin-left: 60px;
+    padding: 30px;
+  }
+
   @media only screen and (max-width: 720px) {
     margin-right: 0;
     margin-left: 0;
@@ -447,12 +479,14 @@ hr {
 
   h1 {
     letter-spacing: 1.76px;
-    font-size: 44px;
+    font-size: 42px;
     margin-top: 0;
-  }
-  h2 {
-    letter-spacing: 1.6px;
-    font-size: 32px;
+    margin-bottom: 35px;
+
+    @media (max-width: 540px) {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
   }
 }
 
